--- a/API.SolutionPortal/API.SolutionPortal.csproj
+++ b/API.SolutionPortal/API.SolutionPortal.csproj
@@ -3554,6 +3554,9 @@
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="UI_Service\Company.js" />
+    <Content Include="UI_Service\Login.js" />
+    <Content Include="UI_Service\Menu.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
