--- a/API.SolutionPortal/API.SolutionPortal.csproj
+++ b/API.SolutionPortal/API.SolutionPortal.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Common\Enums\PersonRoleType.cs" />
     <Compile Include="Common\ServiceResult.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
+    <Compile Include="Controllers\CostCenterController.cs" />
     <Compile Include="Controllers\CostTypeController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -2644,6 +2645,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="CostCenter.html" />
     <Content Include="CostType.html" />
     <Content Include="dist\css\pages\bootstrap-switch.css" />
     <Content Include="dist\css\pages\breadcrumb-page.css" />
@@ -3561,6 +3563,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="TaxCode.html" />
     <Content Include="UI_Service\Company.js" />
+    <Content Include="UI_Service\CostCenter.js" />
     <Content Include="UI_Service\CostType.js" />
     <Content Include="UI_Service\Login.js" />
     <Content Include="UI_Service\Menu.js" />
